# satip

./: CMakeLists.txt  README.md
dat/: ARD ZDF HD.csv  Astra19.csv  satdevices.conf
src/: CMakeLists.txt  config.h.in
src/cmd/: CMakeLists.txt  main.cpp  main.cpp~
src/lib/: CMakeLists.txt  channel.cpp  channel.h  confparser.cpp  confparser.h  rtp.cpp  rtp.h  rtsp.cpp  rtsp.h  socket.cpp  socket.h  windows.h
src/lib/backends/: backend.h  backend.h~
src/lib/device/: satip.cpp  satip.h
src/qt/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
